<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_unit_conversion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.justin.js_project2_unitconversion.UnitConversionActivity"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText2"
        android:gravity="center"
        android:labelFor="@id/editText2" />

    <TextView
        android:text="@string/amountCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/textView3" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:text="@string/fromLabel"
            android:layout_height="match_parent"
            android:id="@+id/textView"
            android:layout_width="55dp"
            android:textSize="18sp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/spinner3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:text="@string/convertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/convert_button"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:text="@string/swapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/swap_button"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/toLabel"
            android:layout_height="match_parent"
            android:id="@+id/textView4"
            android:textSize="18sp"
            android:layout_width="55dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/spinner4" />
    </LinearLayout>

    <TextView
        android:text="@string/toAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText"
        android:labelFor="@id/editText"
        android:gravity="center"/>
</LinearLayout>
